# super-agent-hub

./: .gitignore  CLAUDE.md  LICENSE  README.md  agent-hub-backend.spec  desktop_entry.py  package-lock.json  pyproject.toml
.github/workflows/: build.yml
agent_hub/: __init__.py  config.py  detector.py  main.py  orchestrator.py  server.py  session_store.py  stats.py
agent_hub/adapters/: __init__.py  base.py  claude.py  codex.py  hermes.py
agent_hub/orchestrator/: __init__.py  base.py  consultation.py  debate.py  judge.py  parallel.py  prompts.py  serial.py  task_plan.py
agent_hub/routes/: chat_ws.py  engines.py  files.py  projects.py  sessions.py  stats.py  team_ws.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/components/: ChatInput.jsx  EngineCard.jsx  MessageBubble.jsx  MessageList.jsx  SessionList.jsx  Sidebar.jsx  TokenBadge.jsx  ToolCallCard.jsx  TrendChart.jsx
frontend/src/components/consultation/: ConsultationView.jsx  PlanConfirmationPanel.jsx  TaskExecutionPanel.jsx
frontend/src/contexts/: ProjectContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useEngines.js  useStats.js  useTeamSession.js  useWebSocket.js
frontend/src/pages/: ChatPage.jsx  HomePage.jsx  SessionsPage.jsx  SettingsPage.jsx  StatsPage.jsx  TeamChatPage.jsx
frontend/src/styles/: global.css
scripts/: build-all.sh  build-backend.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+5 files in other folders)
